src/main/java/com/github/bod/ijpluginlspexplorations/GraphQLParser.java
// This is a generated file. Not intended for manual editing.
package com.github.bod.ijpluginlspexplorations;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;
import com.intellij.psi.tree.TokenSet;

import static com.github.bod.ijpluginlspexplorations.psi.GraphQLElementTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.TRUE_CONDITION;
import static com.intellij.lang.parser.GeneratedParserUtilBase._COLLAPSE_;
import static com.intellij.lang.parser.GeneratedParserUtilBase._NONE_;
import static com.intellij.lang.parser.GeneratedParserUtilBase._NOT_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.adapt_builder_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.consumeToken;
import static com.intellij.lang.parser.GeneratedParserUtilBase.consumeTokens;
import static com.intellij.lang.parser.GeneratedParserUtilBase.create_token_set_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.current_position_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.empty_element_parsed_guard_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.enter_section_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.exit_section_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.nextTokenIs;
import static com.intellij.lang.parser.GeneratedParserUtilBase.recursion_guard_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.report_error_;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class GraphQLParser implements PsiParser, LightPsiParser {

    public ASTNode parse(IElementType type, PsiBuilder builder) {
        parseLight(type, builder);
        return builder.getTreeBuilt();
    }

    public void parseLight(IElementType type, PsiBuilder builder) {
        boolean result;
        builder = adapt_builder_(type, builder, this, EXTENDS_SETS_);
        Marker marker = enter_section_(builder, 0, _COLLAPSE_, null);
        result = parse_root_(type, builder);
        exit_section_(builder, 0, marker, type, result, true, TRUE_CONDITION);
    }

    protected boolean parse_root_(IElementType type, PsiBuilder builder) {
        return parse_root_(type, builder, 0);
    }

    static boolean parse_root_(IElementType type, PsiBuilder builder, int level) {
        return document(builder, level + 1);
    }

    public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[]{
            create_token_set_(BLOCK_STRING, QUOTED_STRING, STRING_LITERAL),
            create_token_set_(LIST_TYPE, NON_NULL_TYPE, TYPE, TYPE_NAME,
                    TYPE_NAME_DEFINITION),
            create_token_set_(ARRAY_VALUE, BOOLEAN_VALUE, ENUM_VALUE, FLOAT_VALUE,
                    INT_VALUE, NULL_VALUE, OBJECT_VALUE, STRING_VALUE,
                    TEMPLATE_VARIABLE, VALUE, VARIABLE),
            create_token_set_(DEFINITION, DIRECTIVE_DEFINITION, ENUM_TYPE_DEFINITION, ENUM_TYPE_EXTENSION_DEFINITION,
                    FRAGMENT_DEFINITION, INPUT_OBJECT_TYPE_DEFINITION, INPUT_OBJECT_TYPE_EXTENSION_DEFINITION, INTERFACE_TYPE_DEFINITION,
                    INTERFACE_TYPE_EXTENSION_DEFINITION, OBJECT_TYPE_DEFINITION, OBJECT_TYPE_EXTENSION_DEFINITION, OPERATION_DEFINITION,
                    SCALAR_TYPE_DEFINITION, SCALAR_TYPE_EXTENSION_DEFINITION, SCHEMA_DEFINITION, SCHEMA_EXTENSION,
                    SELECTION_SET_OPERATION_DEFINITION, TEMPLATE_DEFINITION, TYPED_OPERATION_DEFINITION, TYPE_DEFINITION,
                    TYPE_EXTENSION, TYPE_SYSTEM_DEFINITION, UNION_TYPE_DEFINITION, UNION_TYPE_EXTENSION_DEFINITION),
    };

    /* ********************************************************** */
    // identifier ':'
    public static boolean alias(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "alias")) return false;
        boolean result;
        Marker marker = enter_section_(builder, level, _NONE_, ALIAS, "<alias>");
        result = identifier(builder, level + 1);
        result = result && consumeToken(builder, COLON);
        exit_section_(builder, level, marker, result, false, null);
        return result;
    }

    /* ********************************************************** */
    // '&'? typeName
    static boolean ampTypeName(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "ampTypeName")) return false;
        boolean result;
        Marker marker = enter_section_(builder);
        result = ampTypeName_0(builder, level + 1);
        result = result && typeName(builder, level + 1);
        exit_section_(builder, marker, null, result);
        return result;
    }

    // '&'?
    private static boolean ampTypeName_0(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "ampTypeName_0")) return false;
        consumeToken(builder, AMP);
        return true;
    }

    /* ********************************************************** */
    // identifier ':' value
    public static boolean argument(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "argument")) return false;
        boolean result, pinned;
        Marker marker = enter_section_(builder, level, _NONE_, ARGUMENT, "<argument>");
        result = identifier(builder, level + 1);
        pinned = result; // pin = 1
        result = result && report_error_(builder, consumeToken(builder, COLON));
        result = pinned && value(builder, level + 1) && result;
        exit_section_(builder, level, marker, result, pinned, GraphQLParser::argument_recover);
        return result || pinned;
    }

    /* ********************************************************** */
    // !(')' | argument)
    static boolean argument_recover(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "argument_recover")) return false;
        boolean result;
        Marker marker = enter_section_(builder, level, _NOT_);
        result = !argument_recover_0(builder, level + 1);
        exit_section_(builder, level, marker, result, false, null);
        return result;
    }

    // ')' | argument
    private static boolean argument_recover_0(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "argument_recover_0")) return false;
        boolean result;
        Marker marker = enter_section_(builder);
        result = consumeToken(builder, PAREN_R);
        if (!result) result = argument(builder, level + 1);
        exit_section_(builder, marker, null, result);
        return result;
    }

    /* ********************************************************** */
    // '(' argument+ ')'
    public static boolean arguments(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "arguments")) return false;
        if (!nextTokenIs(builder, PAREN_L)) return false;
        boolean result, pinned;
        Marker marker = enter_section_(builder, level, _NONE_, ARGUMENTS, null);
        result = consumeToken(builder, PAREN_L);
        pinned = result; // pin = 1
        result = result && report_error_(builder, arguments_1(builder, level + 1));
        result = pinned && consumeToken(builder, PAREN_R) && result;
        exit_section_(builder, level, marker, result, pinned, null);
        return result || pinned;
    }

    // argument+
    private static boolean arguments_1(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "arguments_1")) return false;
        boolean result;
        Marker marker = enter_section_(builder);
        result = argument(builder, level + 1);
        while (result) {
            int pos = current_position_(builder);
            if (!argument(builder, level + 1)) break;
            if (!empty_element_parsed_guard_(builder, "arguments_1", pos)) break;
        }
        exit_section_(builder, marker, null, result);
        return result;
    }

    /* ********************************************************** */
    // '(' inputValueDefinition+ ')'
    public static boolean argumentsDefinition(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "argumentsDefinition")) return false;
        if (!nextTokenIs(builder, PAREN_L)) return false;
        boolean result, pinned;
        Marker marker = enter_section_(builder, level, _NONE_, ARGUMENTS_DEFINITION, null);
        result = consumeToken(builder, PAREN_L);
        pinned = result; // pin = 1
        result = result && report_error_(builder, argumentsDefinition_1(builder, level + 1));
        result = pinned && consumeToken(builder, PAREN_R) && result;
        exit_section_(builder, level, marker, result, pinned, null);
        return result || pinned;
    }

    // inputValueDefinition+
    private static boolean argumentsDefinition_1(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "argumentsDefinition_1")) return false;
        boolean result;
        Marker marker = enter_section_(builder);
        result = inputValueDefinition(builder, level + 1);
        while (result) {
            int pos = current_position_(builder);
            if (!inputValueDefinition(builder, level + 1)) break;
            if (!empty_element_parsed_guard_(builder, "argumentsDefinition_1", pos)) break;
        }
        exit_section_(builder, marker, null, result);
        return result;
    }

    /* ********************************************************** */
    // '[' arrayValueElement* ']'
    public static boolean arrayValue(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "arrayValue")) return false;
        if (!nextTokenIs(builder, BRACKET_L)) return false;
        boolean result, pinned;
        Marker marker = enter_section_(builder, level, _NONE_, ARRAY_VALUE, null);
        result = consumeToken(builder, BRACKET_L);
        pinned = result; // pin = 1
        result = result && report_error_(builder, arrayValue_1(builder, level + 1));
        result = pinned && consumeToken(builder, BRACKET_R) && result;
        exit_section_(builder, level, marker, result, pinned, null);
        return result || pinned;
    }

    // arrayValueElement*
    private static boolean arrayValue_1(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "arrayValue_1")) return false;
        while (true) {
            int pos = current_position_(builder);
            if (!arrayValueElement(builder, level + 1)) break;
            if (!empty_element_parsed_guard_(builder, "arrayValue_1", pos)) break;
        }
        return true;
    }

    /* ********************************************************** */
    // value
    static boolean arrayValueElement(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "arrayValueElement")) return false;
        boolean result;
        Marker marker = enter_section_(builder, level, _NONE_);
        result = value(builder, level + 1);
        exit_section_(builder, level, marker, result, false, GraphQLParser::arrayValueElement_recover);
        return result;
    }

    /* ********************************************************** */
    // !(']'| value)
    static boolean arrayValueElement_recover(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "arrayValueElement_recover")) return false;
        boolean result;
        Marker marker = enter_section_(builder, level, _NOT_);
        result = !arrayValueElement_recover_0(builder, level + 1);
        exit_section_(builder, level, marker, result, false, null);
        return result;
    }

    // ']'| value
    private static boolean arrayValueElement_recover_0(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "arrayValueElement_recover_0")) return false;
        boolean result;
        result = consumeToken(builder, BRACKET_R);
        if (!result) result = value(builder, level + 1);
        return result;
    }

    /* ********************************************************** */
    // OPEN_TRIPLE_QUOTE REGULAR_STRING_PART* CLOSING_TRIPLE_QUOTE
    public static boolean blockString(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "blockString")) return false;
        if (!nextTokenIs(builder, OPEN_TRIPLE_QUOTE)) return false;
        boolean result, pinned;
        Marker marker = enter_section_(builder, level, _NONE_, BLOCK_STRING, null);
        result = consumeToken(builder, OPEN_TRIPLE_QUOTE);
        pinned = result; // pin = 1
        result = result && report_error_(builder, blockString_1(builder, level + 1));
        result = pinned && consumeToken(builder, CLOSING_TRIPLE_QUOTE) && result;
        exit_section_(builder, level, marker, result, pinned, null);
        return result || pinned;
    }

    // REGULAR_STRING_PART*
    private static boolean blockString_1(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "blockString_1")) return false;
        while (true) {
            int pos = current_position_(builder);
            if (!consumeToken(builder, REGULAR_STRING_PART)) break;
            if (!empty_element_parsed_guard_(builder, "blockString_1", pos)) break;
        }
        return true;
    }

    /* ********************************************************** */
    // 'true' | 'false'
    public static boolean booleanValue(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "booleanValue")) return false;
        boolean result;
        Marker marker = enter_section_(builder, level, _NONE_, BOOLEAN_VALUE, "<boolean value>");
        result = consumeToken(builder, "true");
        if (!result) result = consumeToken(builder, "false");
        exit_section_(builder, level, marker, result, false, null);
        return result;
    }

    /* ********************************************************** */
    // '=' value
    public static boolean defaultValue(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "defaultValue")) return false;
        if (!nextTokenIs(builder, EQUALS)) return false;
        boolean result, pinned;
        Marker marker = enter_section_(builder, level, _NONE_, DEFAULT_VALUE, null);
        result = consumeToken(builder, EQUALS);
        pinned = result; // pin = 1
        result = result && value(builder, level + 1);
        exit_section_(builder, level, marker, result, pinned, null);
        return result || pinned;
    }

    /* ********************************************************** */
    // operationDefinition |
    //   fragmentDefinition |
    //   typeSystemDefinition |
    //   templateDefinition
    public static boolean definition(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "definition")) return false;
        boolean result;
        Marker marker = enter_section_(builder, level, _COLLAPSE_, DEFINITION, "<definition>");
        result = operationDefinition(builder, level + 1);
        if (!result) result = fragmentDefinition(builder, level + 1);
        if (!result) result = typeSystemDefinition(builder, level + 1);
        if (!result) result = templateDefinition(builder, level + 1);
        exit_section_(builder, level, marker, result, false, GraphQLParser::definition_recover);
        return result;
    }

    /* ********************************************************** */
    // operationType | 'fragment' | 'schema' | 'type' | 'interface' | 'input' | 'enum' | 'union' | 'scalar' | 'directive' | 'extend'
    static boolean definition_keywords(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "definition_keywords")) return false;
        boolean result;
        result = operationType(builder, level + 1);
        if (!result) result = consumeToken(builder, FRAGMENT_KEYWORD);
        if (!result) result = consumeToken(builder, SCHEMA_KEYWORD);
        if (!result) result = consumeToken(builder, TYPE_KEYWORD);
        if (!result) result = consumeToken(builder, INTERFACE_KEYWORD);
        if (!result) result = consumeToken(builder, INPUT_KEYWORD);
        if (!result) result = consumeToken(builder, ENUM_KEYWORD);
        if (!result) result = consumeToken(builder, UNION_KEYWORD);
        if (!result) result = consumeToken(builder, SCALAR_KEYWORD);
        if (!result) result = consumeToken(builder, DIRECTIVE_KEYWORD);
        if (!result) result = consumeToken(builder, EXTEND_KEYWORD);
        return result;
    }

    /* ********************************************************** */
    // !(root_tokens | NAME)
    static boolean definition_recover(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "definition_recover")) return false;
        boolean result;
        Marker marker = enter_section_(builder, level, _NOT_);
        result = !definition_recover_0(builder, level + 1);
        exit_section_(builder, level, marker, result, false, null);
        return result;
    }

    // root_tokens | NAME
    private static boolean definition_recover_0(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "definition_recover_0")) return false;
        boolean result;
        result = root_tokens(builder, level + 1);
        if (!result) result = consumeToken(builder, NAME);
        return result;
    }

    /* ********************************************************** */
    // stringLiteral
    public static boolean description(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "description")) return false;
        if (!nextTokenIs(builder, "<description>", OPEN_QUOTE, OPEN_TRIPLE_QUOTE)) return false;
        boolean result;
        Marker marker = enter_section_(builder, level, _NONE_, DESCRIPTION, "<description>");
        result = stringLiteral(builder, level + 1);
        exit_section_(builder, level, marker, result, false, null);
        return result;
    }

    /* ********************************************************** */
    // '@' identifier arguments?
    public static boolean directive(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "directive")) return false;
        if (!nextTokenIs(builder, AT)) return false;
        boolean result, pinned;
        Marker marker = enter_section_(builder, level, _NONE_, DIRECTIVE, null);
        result = consumeToken(builder, AT);
        pinned = result; // pin = 1
        result = result && report_error_(builder, identifier(builder, level + 1));
        result = pinned && directive_2(builder, level + 1) && result;
        exit_section_(builder, level, marker, result, pinned, null);
        return result || pinned;
    }

    // arguments?
    private static boolean directive_2(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "directive_2")) return false;
        arguments(builder, level + 1);
        return true;
    }

    /* ********************************************************** */
    // description? 'directive' '@' identifier argumentsDefinition? 'repeatable'? 'on' directiveLocations
    public static boolean directiveDefinition(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "directiveDefinition")) return false;
        boolean result, pinned;
        Marker marker = enter_section_(builder, level, _NONE_, DIRECTIVE_DEFINITION, "<directive definition>");
        result = directiveDefinition_0(builder, level + 1);
        result = result && consumeTokens(builder, 1, DIRECTIVE_KEYWORD, AT);
        pinned = result; // pin = 2
        result = result && report_error_(builder, identifier(builder, level + 1));
        result = pinned && report_error_(builder, directiveDefinition_4(builder, level + 1)) && result;
        result = pinned && report_error_(builder, directiveDefinition_5(builder, level + 1)) && result;
        result = pinned && report_error_(builder, consumeToken(builder, ON_KEYWORD)) && result;
        result = pinned && directiveLocations(builder, level + 1) && result;
        exit_section_(builder, level, marker, result, pinned, null);
        return result || pinned;
    }

    // description?
    private static boolean directiveDefinition_0(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "directiveDefinition_0")) return false;
        description(builder, level + 1);
        return true;
    }

    // argumentsDefinition?
    private static boolean directiveDefinition_4(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "directiveDefinition_4")) return false;
        argumentsDefinition(builder, level + 1);
        return true;
    }

    // 'repeatable'?
    private static boolean directiveDefinition_5(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "directiveDefinition_5")) return false;
        consumeToken(builder, REPEATABLE_KEYWORD);
        return true;
    }

    /* ********************************************************** */
    // 'QUERY' | 'MUTATION' | 'SUBSCRIPTION' | 'FIELD' | 'FRAGMENT_DEFINITION' | 'FRAGMENT_SPREAD' | 'INLINE_FRAGMENT' |
    //   'SCHEMA' | 'SCALAR' | 'OBJECT' | 'FIELD_DEFINITION' | 'ARGUMENT_DEFINITION' | 'INTERFACE' | 'UNION' | 'ENUM' |
    //   'ENUM_VALUE' | 'INPUT_OBJECT' | 'INPUT_FIELD_DEFINITION' | NAME
    public static boolean directiveLocation(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "directiveLocation")) return false;
        boolean result;
        Marker marker = enter_section_(builder, level, _NONE_, DIRECTIVE_LOCATION, "<directive location>");
        result = consumeToken(builder, "QUERY");
        if (!result) result = consumeToken(builder, "MUTATION");
        if (!result) result = consumeToken(builder, "SUBSCRIPTION");
        if (!result) result = consumeToken(builder, "FIELD");
        if (!result) result = consumeToken(builder, "FRAGMENT_DEFINITION");
        if (!result) result = consumeToken(builder, "FRAGMENT_SPREAD");
        if (!result) result = consumeToken(builder, "INLINE_FRAGMENT");
        if (!result) result = consumeToken(builder, "SCHEMA");
        if (!result) result = consumeToken(builder, "SCALAR");
        if (!result) result = consumeToken(builder, "OBJECT");
        if (!result) result = consumeToken(builder, "FIELD_DEFINITION");
        if (!result) result = consumeToken(builder, "ARGUMENT_DEFINITION");
        if (!result) result = consumeToken(builder, "INTERFACE");
        if (!result) result = consumeToken(builder, "UNION");
        if (!result) result = consumeToken(builder, "ENUM");
        if (!result) result = consumeToken(builder, "ENUM_VALUE");
        if (!result) result = consumeToken(builder, "INPUT_OBJECT");
        if (!result) result = consumeToken(builder, "INPUT_FIELD_DEFINITION");
        if (!result) result = consumeToken(builder, NAME);
        exit_section_(builder, level, marker, result, false, null);
        return result;
    }

    /* ********************************************************** */
    // '|'? directiveLocation pipeDirectiveLocation*
    public static boolean directiveLocations(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "directiveLocations")) return false;
        boolean result;
        Marker marker = enter_section_(builder, level, _NONE_, DIRECTIVE_LOCATIONS, "<directive locations>");
        result = directiveLocations_0(builder, level + 1);
        result = result && directiveLocation(builder, level + 1);
        result = result && directiveLocations_2(builder, level + 1);
        exit_section_(builder, level, marker, result, false, null);
        return result;
    }

    // '|'?
    private static boolean directiveLocations_0(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "directiveLocations_0")) return false;
        consumeToken(builder, PIPE);
        return true;
    }

    // pipeDirectiveLocation*
    private static boolean directiveLocations_2(PsiBuilder builder, int level) {
        if (!recursion_guard_(builder, level, "directiveLocations_2")) return false;
        while (true) {
            int pos = current_position_(builder);
            if (!pipeDirectiveLocation(builder, level + 1)) break;
            if (!empty_element_parsed_guard_(builder, "directiveLocations_2", pos)) break;
        }
        return true;
    }
